[metadata]
name = dlepard
description = Implementation for the DLEP protocol defined in RFC 8175
long_description = file: README.md
version = 1.1.0
license = MIT
author = Lars Wagner
author_email = lars.wagner@rohde-schwarz.com
url = https://github.com/Rohde-Schwarz/dlepard

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiohttp
tests_require =
    pytest
    pytest-mock

[options.packages.find]
where = src
